# imgtotxt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  res.txt  setup.py
from_image/: __init__.py  __main__.py  app.py  ocr.py  ui.py  ui_handler.py
imgtotxt/: __init__.py  __main__.py  app.py  ocr.py  state.py
