[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptoosl]
include-package-data = true

[project]
name = "imgtotxt"
version = "0.1.0"
dependencies = ["easyocr", "toga"]
description = "OCR app running locally with native UI"
license = { text = "GPL-3" }
authors = [{ name = "Ahmed K. A.", email = "ahmadkabdullah@pm.me" }]

[tool.setuptools.packages.find]
include = ["imgtotxt"]
