[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptoosl]
include-package-data = true

[project]
name = "imgtotxt"
version = "0.1.1"
dependencies = ["easyocr", "toga"]
description = "OCR app running locally with native UI"
license = { text = "GPL-3" }
readme = "README.md"
authors = [{ name = "Ahmed K. A.", email = "ahmadkabdullah@pm.me" }]

[project.gui-scripts]
imgtotxt = "imgtotxt:main"

[tool.setuptools.packages.find]
include = ["imgtotxt"]
